--- a/DemoDay/package.json
+++ b/DemoDay/package.json
@@ -15,12 +15,10 @@
     "mongoose": ">=5.7.5",
     "morgan": "^1.9.1",
     "mpath": ">=0.5.1",
-    "nodemon": "^2.0.2",
     "passport": "~0.3.2",
     "passport-facebook": "~2.1.1",
     "passport-google-oauth": "~1.0.0",
     "passport-local": "~1.0.0",
-    "passport-twitter": "~1.0.4",
-    "sudo": "^1.0.3"
+    "passport-twitter": "~1.0.4"
   }
 }
